Fix overflow on vocals page on mobile screen

--- a/css/vocals.css
+++ b/css/vocals.css
@@ -111,3 +111,14 @@ progress {
         opacity: 1;
     }
 }
+
+@media only screen and (max-width: 600px) {
+
+    .vocals-activity-emojis {
+        max-width: 100%;
+    }
+
+    .activity-container > * {
+        padding: 0 10px;
+    }
+}
